--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/SmartHotel.Clients.csproj
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/SmartHotel.Clients.csproj
@@ -56,5 +56,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RestaurantView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
