--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients.Android/SmartHotel.Clients.Android.csproj
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients.Android/SmartHotel.Clients.Android.csproj
@@ -1209,5 +1209,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\FoodImage.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Babyfood39.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Babyfood42.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Babyfood38.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
