--- a/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance.Android/SmartHotel.Clients.Maintenance.Android.csproj
+++ b/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance.Android/SmartHotel.Clients.Maintenance.Android.csproj
@@ -115,5 +115,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_leak.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_refresh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_toothbrush_off.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
