--- a/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance.csproj
+++ b/SmartHotel360_maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance/SmartHotel.Clients.Maintenance.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\InputPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
