--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients.Android/SmartHotel.Clients.Android.csproj
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients.Android/SmartHotel.Clients.Android.csproj
@@ -1124,6 +1124,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.68.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugins.Messaging">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamanimation">
       <Version>1.2.0</Version>
     </PackageReference>
